...
                   .multilineTextAlignment(.leading)

               Spacer()
           }
           .padding()
           }
           .navigationTitle("Movie Details")
           .navigationBarTitleDisplayMode(.inline)
           .navigationBarBackButtonHidden()
           .toolbar(content: {
               ToolbarItem(placement: .topBarTrailing) {
                   StarButton(isFavorite: movie?.isFavorite) {
                       toggleFavorite()
...
